objects/Laser_Artwork_Order__c.object
<CustomObject>
    <fields>
        <fullName>Tracking_Link_outbound__c</fullName>
        <formula>IF (NOT ( ISBLANK( Tracking_Number_outbound__c )), 
HYPERLINK(&quot;http://wwwapps.ups.com/etracking/tracking.cgi?tracknums_displayed=1&amp;TypeOfInquiryNumber=T&amp;HTMLVersion=4.0&amp;InquiryNumber1=&quot;&amp; Tracking_Number_outbound__c ,&quot;Track Outbound Package&quot; ), &quot; &quot;)</formula>
        <label>Tracking Link (outbound)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tracking_Number_inbound__c</fullName>
        <label>Tracking Number (inbound)</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tracking_Number_outbound__c</fullName>
        <label>Tracking Number (outbound)</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transition_Date__c</fullName>
        <label>Transition Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>User_Changed_Status__c</fullName>
        <description>Used for Approval Process Reporting. Hidden from Users</description>
        <label>User Changed Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VIC__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>VIC</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Forms_Order3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vision_Doc_Received__c</fullName>
        <label>Vision Doc Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Void_Date__c</fullName>
        <label>Void Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Void_Notes__c</fullName>
        <label>Void Notes</label>
        <length>400</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Void_Stock_Order__c</fullName>
        <label>Void Stock Order #</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Welcome_Kit_Sent__c</fullName>
        <label>Welcome Kit Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Welcome_Kit_Type__c</fullName>
        <label>Welcome Kit Type</label>
        <picklist>
            <picklistValues>
                <fullName>Add-On FI/DC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Concurrent FI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CTW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Heavy Equipment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Impact FI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OneEighty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P/S/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ZIP_Hidden__c</fullName>
        <formula>Ship_CMF_Info__r.Account__r.BillingPostalCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ZIP-Hidden</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ePayments_Client__c</fullName>
        <label>ePayments Client</label>
        <summarizedField>Laser_Ordered_Forms__c.Laser_Ordered_Forms__c</summarizedField>
        <summaryForeignKey>Laser_Ordered_Forms__c.Laser_Artwork_Order__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>eSignature_Client__c</fullName>
        <label>eSignature Client</label>
        <summarizedField>Laser_Ordered_Forms__c.eSignature__c</summarizedField>
        <summaryForeignKey>Laser_Ordered_Forms__c.Laser_Artwork_Order__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Forms Order</label>
    <listViews>
        <fullName>All_Artwork_Orders</fullName>
        <columns>NAME</columns>
        <columns>Ship_CMF_Info__c</columns>
        <columns>Contract_PO__c</columns>
        <columns>Prev_SO__c</columns>
        <columns>Stock_Order__c</columns>
        <columns>Contact__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All Artwork Orders</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>My_Open_Orders</fullName>
        <booleanFilter>(1 AND 2 AND 3 AND 4) OR (5 AND 6 AND 7 AND 8)</booleanFilter>
        <columns>NAME</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Order_Type__c</columns>
        <columns>Order_Status__c</columns>
        <columns>Stock_Order__c</columns>
        <columns>Contract_PO__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>KnowledgeLake_Link__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Order_Type__c</field>
            <operation>equals</operation>
            <value>Add/Change - ELF,Add/Change - Elite,Add/Change – Other,Buy/Sell - ELF</value>
        </filters>
        <filters>
            <field>Order_Type__c</field>
            <operation>equals</operation>
            <value>Buy/Sell - Elite,Buy/Sell – Other,New Install - ELF,New Install - Elite</value>
        </filters>
        <filters>
            <field>Order_Type__c</field>
            <operation>equals</operation>
            <value>New Install – Other</value>
        </filters>
        <filters>
            <field>Order_Status__c</field>
            <operation>notEqual</operation>
            <value>Installed</value>
        </filters>
        <filters>
            <field>Order_Type__c</field>
            <operation>equals</operation>
            <value>Add/Change - Alliance,Add/Change - eShowroom/Showroom,Add/Change - FI/DC</value>
        </filters>
        <filters>
            <field>Order_Type__c</field>
            <operation>equals</operation>
            <value>Add/Change - WDS,Buy/Sell - Alliance,Buy/Sell - FI/DC,New Install - Alliance</value>
        </filters>
        <filters>
            <field>Order_Type__c</field>
            <operation>equals</operation>
            <value>New Install - eShowroom/Showroom,New Install - FI/DC,New Install - WDS</value>
        </filters>
        <filters>
            <field>Order_Status__c</field>
            <operation>notEqual</operation>
            <value>Sent to Data Mapping/Other</value>
        </filters>
        <label>My Open Orders</label>
    </listViews>
    <nameField>
        <displayFormat>FO - {0000000}</displayFormat>
        <label>Art Order</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Forms Order</pluralLabel>
    <recordTypes>
        <fullName>F_I</fullName>
        <active>true</active>
        <label>F&amp;I</label>
    </recordTypes>
    <recordTypes>
        <fullName>Laser_Imaging</fullName>
        <active>true</active>
        <label>Laser Imaging</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>DS_FO_AssignedFormsBuilder</fullName>
        <active>true</active>
        <description>Assigned Form Builder needed for status &apos;Q/S Submitted&apos; and &apos;Sold&apos;</description>
        <errorConditionFormula>AND(RecordType.Name=&quot;F&amp;I&quot;,OR( 
AND (NOT(BEGINS($User.Username,&quot;integration_user@adp.com&quot;)), ISNEW(), ISBLANK( Assigned_Forms_Builder__c ),ISPICKVAL(Order_Type__c, &quot;New Install - Impact&quot;) || ISPICKVAL(Order_Type__c, &quot;PFW/CRM/Custom Pencil&quot;) || ISPICKVAL(Order_Type__c, &quot;One-Eighty&quot;))), 
NOT(BEGINS($User.Username,&quot;integration_user@adp.com&quot;)) &amp;&amp; NOT(ISCHANGED( Ship_CMF_Info__c )) &amp;&amp; (ISPICKVAL(Order_Type__c, &quot;New Install - Impact&quot;) || ISPICKVAL(Order_Type__c, &quot;PFW/CRM/Custom Pencil&quot;) || ISPICKVAL(Order_Type__c, &quot;One-Eighty&quot;)) &amp;&amp; 
(ISPICKVAL(Order_Status__c, &quot;Data Mapping&quot;) || ISPICKVAL(Order_Status__c, &quot;Sold&quot;)) &amp;&amp; (ISBLANK( Assigned_Forms_Builder__c )))</errorConditionFormula>
        <errorDisplayField>Assigned_Forms_Builder__c</errorDisplayField>
        <errorMessage>Assigned Form Builder needed for status &apos;Q/S Submitted&apos; and &apos;Sold&apos;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>DS_FO_DataMapping</fullName>
        <active>true</active>
        <description>If Order Staus = &apos;Data Mapping&apos; Then Data Mapping &gt;= Form Posted</description>
        <errorConditionFormula>AND(RecordType.Name=&quot;F&amp;I&quot;,OR( 
AND (NOT(BEGINS($User.Username,&quot;integration_user@adp.com&quot;)), ISNEW(), Data_Mapping__c &lt; Forms_Posted__c, (ISPICKVAL(Order_Type__c, &quot;Add/Change - FI/DC&quot;) || ISPICKVAL(Order_Type__c, &quot;New Install - FI/DC&quot;) || ISPICKVAL(Order_Type__c, &quot;Upgrade to DC - FI/DC&quot;) || ISPICKVAL(Order_Type__c, &quot;Buy/Sell - FI/DC&quot;))), 
NOT(BEGINS($User.Username,&quot;integration_user@adp.com&quot;)) &amp;&amp; NOT(ISCHANGED( Ship_CMF_Info__c )) &amp;&amp; (ISPICKVAL(Order_Type__c, &quot;Add/Change - FI/DC&quot;) || ISPICKVAL(Order_Type__c, &quot;New Install - FI/DC&quot;) || ISPICKVAL(Order_Type__c, &quot;Upgrade to DC - FI/DC&quot;) || ISPICKVAL(Order_Type__c, &quot;Buy/Sell - FI/DC&quot;)) &amp;&amp; 
(ISPICKVAL(Order_Status__c, &quot;Data Mapping&quot;)) &amp;&amp; 
((Data_Mapping__c &lt; Forms_Posted__c || ISBLANK(Data_Mapping__c) || ISBLANK(Forms_Posted__c)))))</errorConditionFormula>
        <errorDisplayField>Data_Mapping__c</errorDisplayField>
        <errorMessage>Incorrect Date or Form Posted is null ===&gt; If Order Staus = &apos;Data Mapping&apos; Then Data Mapping &gt;= Form Posted</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>DS_FO_FCCName</fullName>
        <active>true</active>
        <description>FCC Name Required on Status Sent to FB and/or Complete</description>
        <errorConditionFormula>OR(AND(NOT(BEGINS($User.Username,&quot;integration_user@adp.com&quot;)),ISNEW(),ISPICKVAL(Status__c,&quot;Sent to FB and/or Complete&quot;),ISBLANK(FCC_Name__c)), 
NOT(BEGINS($User.Username,&quot;integration_user@adp.com&quot;)) &amp;&amp; NOT(ISCHANGED( Ship_CMF_Info__c )) &amp;&amp; ISPICKVAL(Status__c,&quot;Sent to FB and/or Complete&quot;) &amp;&amp; ISBLANK(FCC_Name__c))</errorConditionFormula>
        <errorDisplayField>FCC_Name__c</errorDisplayField>
        <errorMessage>Please enter FCC Name</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>DS_FO_FormstoLISTeam</fullName>
        <active>true</active>
        <description>Forms To LIS Team Order Status is invalid for Buy/Sell and New Install Order Types</description>
        <errorConditionFormula>AND(RecordType.Name=&quot;Laser Imaging&quot;,OR(
AND(NOT(BEGINS($User.Username,&quot;integration_user@adp.com&quot;)), ISNEW(), ISPICKVAL(Order_Status__c, &quot;Forms to LIS Team&quot;),ISPICKVAL(Order_Type__c, &quot;New Install - DASH&quot;) || ISPICKVAL(Order_Type__c, &quot;New Install - ELF&quot;) || ISPICKVAL(Order_Type__c, &quot;New Install - Elite&quot;) || ISPICKVAL(Order_Type__c, &quot;New Install - eShowroom/Showroom&quot;) || ISPICKVAL(Order_Type__c, &quot;New Install - FI/DC&quot;) || ISPICKVAL(Order_Type__c, &quot;New Install - Other&quot;) || ISPICKVAL(Order_Type__c, &quot;Buy/Sell - DASH&quot;) || ISPICKVAL(Order_Type__c, &quot;Buy/Sell - ELF&quot;)|| ISPICKVAL(Order_Type__c, &quot;Buy/Sell - Elite&quot;) || ISPICKVAL(Order_Type__c, &quot;Buy/Sell - eShowroom/Showroom&quot;) || ISPICKVAL(Order_Type__c, &quot;Buy/Sell - FI/DC&quot;) || ISPICKVAL(Order_Type__c, &quot;Buy/Sell - Other&quot;)),
NOT(BEGINS($User.Username,&quot;integration_user@adp.com&quot;)) &amp;&amp; NOT(ISCHANGED( Ship_CMF_Info__c )) &amp;&amp; (ISPICKVAL(Order_Type__c, &quot;New Install - DASH&quot;) || ISPICKVAL(Order_Type__c, &quot;New Install - ELF&quot;) || ISPICKVAL(Order_Type__c, &quot;New Install - Elite&quot;) || ISPICKVAL(Order_Type__c, &quot;New Install - eShowroom/Showroom&quot;) || ISPICKVAL(Order_Type__c, &quot;New Install - FI/DC&quot;) || ISPICKVAL(Order_Type__c, &quot;New Install - Other&quot;) || ISPICKVAL(Order_Type__c, &quot;Buy/Sell - DASH&quot;) || ISPICKVAL(Order_Type__c, &quot;Buy/Sell - ELF&quot;)|| ISPICKVAL(Order_Type__c, &quot;Buy/Sell - Elite&quot;) || ISPICKVAL(Order_Type__c, &quot;Buy/Sell - eShowroom/Showroom&quot;) || ISPICKVAL(Order_Type__c, &quot;Buy/Sell - FI/DC&quot;) || ISPICKVAL(Order_Type__c, &quot;Buy/Sell - Other&quot;)) &amp;&amp; 
(ISPICKVAL(Order_Status__c, &quot;Forms to LIS Team&quot;))))</errorConditionFormula>
        <errorDisplayField>Order_Status__c</errorDisplayField>
        <errorMessage>Forms To LIS Team Order Status is invalid for Buy/Sell and New Install Order Types</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>DS_FO_WelcomeKitType</fullName>
        <active>true</active>
        <description>Welcome Kit Type Required on Status Sent to FB and/or Complete</description>
        <errorConditionFormula>OR(AND(NOT(BEGINS($User.Username,&quot;integration_user@adp.com&quot;)),ISNEW(),ISPICKVAL(Status__c,&quot;Sent to FB and/or Complete&quot;),ISBLANK(TEXT(Welcome_Kit_Type__c))),
NOT(BEGINS($User.Username,&quot;integration_user@adp.com&quot;)) &amp;&amp; NOT(ISCHANGED( Ship_CMF_Info__c )) &amp;&amp; ISPICKVAL(Status__c,&quot;Sent to FB and/or Complete&quot;) &amp;&amp; ISBLANK(TEXT(Welcome_Kit_Type__c)))</errorConditionFormula>
        <errorDisplayField>Welcome_Kit_Type__c</errorDisplayField>
        <errorMessage>Please enter Welcome Kit Type</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>DS_LAO_ApprovedByClient</fullName>
        <active>true</active>
        <description>Approved by Client &gt;=Proofs to Client</description>
        <errorConditionFormula>OR( 
AND (NOT(BEGINS($User.Username,&quot;integration_user@adp.com&quot;)), ISNEW(), Approved_by_Client__c &lt; Proofs_to_Client__c, (ISPICKVAL(Order_Type__c, &quot;Add/Change - Alliance&quot;) || ISPICKVAL(Order_Type__c, &quot;Add/Change - ELF&quot;) || ISPICKVAL(Order_Type__c, &quot;Add/Change - Elite&quot;) || ISPICKVAL(Order_Type__c, &quot;Add/Change - FI/DC&quot;) || ISPICKVAL(Order_Type__c, &quot;Add/Change - eShowroom/Showroom&quot;) || ISPICKVAL(Order_Type__c, &quot;New Install - Alliance&quot;) || ISPICKVAL(Order_Type__c, &quot;New Install - ELF&quot;) || ISPICKVAL(Order_Type__c, &quot;New Install - Elite&quot;) || ISPICKVAL(Order_Type__c, &quot;New Install - FI/DC&quot;) || ISPICKVAL(Order_Type__c, &quot;New Install - eShowroom/Showroom&quot;) || ISPICKVAL(Order_Type__c, &quot;Upgrade to DC - FI/DC&quot;) || ISPICKVAL(Order_Type__c, &quot;Buy/Sell - Elite&quot;) || ISPICKVAL(Order_Type__c, &quot;Buy/Sell - ELF&quot;) || ISPICKVAL(Order_Type__c, &quot;Buy/Sell - Alliance&quot;) || ISPICKVAL(Order_Type__c, &quot;Buy/Sell - FI/DC&quot;) || ISPICKVAL(Order_Type__c, &quot;Buy/Sell - eShowroom/Showroom&quot;) || ISPICKVAL(Order_Type__c, &quot;New Install Concurrent&quot;))), 
NOT(BEGINS($User.Username,&quot;integration_user@adp.com&quot;)) &amp;&amp; NOT(ISCHANGED( Ship_CMF_Info__c )) &amp;&amp; (ISPICKVAL(Order_Type__c, &quot;Add/Change - Alliance&quot;) || ISPICKVAL(Order_Type__c, &quot;Add/Change - ELF&quot;) || ISPICKVAL(Order_Type__c, &quot;Add/Change - Elite&quot;) || ISPICKVAL(Order_Type__c, &quot;Add/Change - FI/DC&quot;) || ISPICKVAL(Order_Type__c, &quot;Add/Change - eShowroom/Showroom&quot;) || ISPICKVAL(Order_Type__c, &quot;New Install - Alliance&quot;) || ISPICKVAL(Order_Type__c, &quot;New Install - ELF&quot;) || ISPICKVAL(Order_Type__c, &quot;New Install - Elite&quot;) || ISPICKVAL(Order_Type__c, &quot;New Install - FI/DC&quot;) || ISPICKVAL(Order_Type__c, &quot;New Install - eShowroom/Showroom&quot;) || ISPICKVAL(Order_Type__c, &quot;Upgrade to DC - FI/DC&quot;) || ISPICKVAL(Order_Type__c, &quot;Buy/Sell - Elite&quot;) || ISPICKVAL(Order_Type__c, &quot;Buy/Sell - ELF&quot;) || ISPICKVAL(Order_Type__c, &quot;Buy/Sell - Alliance&quot;) || ISPICKVAL(Order_Type__c, &quot;Buy/Sell - FI/DC&quot;) || ISPICKVAL(Order_Type__c, &quot;Buy/Sell - eShowroom/Showroom&quot;) || ISPICKVAL(Order_Type__c, &quot;New Install Concurrent&quot;)) &amp;&amp; 
(ISPICKVAL(Order_Status__c, &quot;Approved&quot;) || ISPICKVAL(Order_Status__c, &quot;Burned&quot;) || ISPICKVAL(Order_Status__c, &quot;Awaiting Approval - ELF Data&quot;) || ISPICKVAL(Order_Status__c, &quot;Installed&quot;) || ISPICKVAL(Order_Status__c, &quot;Sent to Data Mapping/Other&quot;)) &amp;&amp; 
((Approved_by_Client__c &lt; Proofs_to_Client__c) || ISBLANK(Proofs_to_Client__c) || ISBLANK(Approved_by_Client__c)))</errorConditionFormula>
        <errorDisplayField>Approved_by_Client__c</errorDisplayField>
        <errorMessage>Incorrect Date or Proofs to Client is null ===&gt; Approved by Client &gt;=Proofs to Client</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>DS_LAO_ArtworkDueDate</fullName>
        <active>true</active>
        <description>Artwork Due Date &gt;= Artwork to LFD Team</description>
        <errorConditionFormula>AND(RecordType.Name=&quot;Laser Imaging&quot;,OR( 
AND (NOT(BEGINS($User.Username,&quot;integration_user@adp.com&quot;)), ISNEW(), Artwork_Due_Date__c &lt; Artwork_to_LFD_Team__c, (ISPICKVAL(Order_Type__c, &quot;Add/Change - Alliance&quot;) || ISPICKVAL(Order_Type__c, &quot;Add/Change - Fast Track&quot;) || ISPICKVAL(Order_Type__c, &quot;Add/Change - ELF&quot;) || ISPICKVAL(Order_Type__c, &quot;Add/Change - Elite&quot;) || ISPICKVAL(Order_Type__c, &quot;Add/Change - FI/DC&quot;) || ISPICKVAL(Order_Type__c, &quot;Add/Change - eShowroom/Showroom&quot;) || ISPICKVAL(Order_Type__c, &quot;New Install - Alliance&quot;) || ISPICKVAL(Order_Type__c, &quot;New Install - ELF&quot;) || ISPICKVAL(Order_Type__c, &quot;New Install - Elite&quot;) || ISPICKVAL(Order_Type__c, &quot;New Install - FI/DC&quot;) || ISPICKVAL(Order_Type__c, &quot;New Install - eShowroom/Showroom&quot;) || ISPICKVAL(Order_Type__c, &quot;Upgrade to DC - FI/DC&quot;) || ISPICKVAL(Order_Type__c, &quot;Buy/Sell - Elite&quot;) || ISPICKVAL(Order_Type__c, &quot;Buy/Sell - ELF&quot;) || ISPICKVAL(Order_Type__c, &quot;Buy/Sell - Alliance&quot;) || ISPICKVAL(Order_Type__c, &quot;Buy/Sell - FI/DC&quot;) || ISPICKVAL(Order_Type__c, &quot;Buy/Sell - eShowroom/Showroom&quot;))),
NOT(BEGINS($User.Username,&quot;integration_user@adp.com&quot;)) &amp;&amp; NOT(ISCHANGED( Ship_CMF_Info__c )) &amp;&amp; (ISPICKVAL(Order_Type__c, &quot;Add/Change - Alliance&quot;) || ISPICKVAL(Order_Type__c, &quot;Add/Change - Fast Track&quot;) || ISPICKVAL(Order_Type__c, &quot;Add/Change - ELF&quot;) || ISPICKVAL(Order_Type__c, &quot;Add/Change - Elite&quot;) || ISPICKVAL(Order_Type__c, &quot;Add/Change - FI/DC&quot;) || ISPICKVAL(Order_Type__c, &quot;Add/Change - eShowroom/Showroom&quot;) || ISPICKVAL(Order_Type__c, &quot;New Install - Alliance&quot;) || ISPICKVAL(Order_Type__c, &quot;New Install - ELF&quot;) || ISPICKVAL(Order_Type__c, &quot;New Install - Elite&quot;) || ISPICKVAL(Order_Type__c, &quot;New Install - FI/DC&quot;) || ISPICKVAL(Order_Type__c, &quot;New Install - eShowroom/Showroom&quot;) || ISPICKVAL(Order_Type__c, &quot;Upgrade to DC - FI/DC&quot;) || ISPICKVAL(Order_Type__c, &quot;Buy/Sell - Elite&quot;) || ISPICKVAL(Order_Type__c, &quot;Buy/Sell - ELF&quot;) || ISPICKVAL(Order_Type__c, &quot;Buy/Sell - Alliance&quot;) || ISPICKVAL(Order_Type__c, &quot;Buy/Sell - FI/DC&quot;) || ISPICKVAL(Order_Type__c, &quot;Buy/Sell - eShowroom/Showroom&quot;)) &amp;&amp;
(ISPICKVAL(Order_Status__c, &quot;Artwork to LFD Team&quot;) || ISPICKVAL(Order_Status__c, &quot;Proofs to LAS&quot;) || ISPICKVAL(Order_Status__c, &quot;Awaiting Approval&quot;) || ISPICKVAL(Order_Status__c, &quot;Approved&quot;) || ISPICKVAL(Order_Status__c, &quot;Burned&quot;) || ISPICKVAL(Order_Status__c, &quot;Awaiting Approval - ELF Data&quot;) || ISPICKVAL(Order_Status__c, &quot;Installed&quot;) || ISPICKVAL(Order_Status__c, &quot;Sent to Data Mapping/Other&quot;) ||
 ISPICKVAL(Order_Status__c, &quot;AWIP&quot;)) &amp;&amp;
((Artwork_Due_Date__c &lt; Artwork_to_LFD_Team__c) || ISBLANK(Artwork_to_LFD_Team__c) || ISBLANK(Artwork_Due_Date__c))))</errorConditionFormula>
        <errorDisplayField>Artwork_Due_Date__c</errorDisplayField>
        <errorMessage>Incorrect Date or Artwork To LFD Team is null ===&gt; Artwork Due Date &gt;= Artwork to LFD Team</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>DS_LAO_ArtworkReceived</fullName>
        <active>true</active>
        <description>If Order Staus = &apos;Forms Analysis&apos; Then Artwork Received &gt;= CurrentDate - 180</description>
        <errorConditionFormula>OR(
AND (NOT(BEGINS($User.Username,&quot;integration_user@adp.com&quot;)), ISNEW(), Artwork_Received__c &lt; Today() - 180, (ISPICKVAL(Order_Type__c, &quot;New Install - FI/DC&quot;) || ISPICKVAL(Order_Type__c, &quot;Upgrade to DC - FI/DC&quot;))),
NOT(BEGINS($User.Username,&quot;integration_user@adp.com&quot;)) &amp;&amp; NOT(ISCHANGED( Ship_CMF_Info__c )) &amp;&amp; (ISPICKVAL(Order_Type__c, &quot;New Install - FI/DC&quot;) || ISPICKVAL(Order_Type__c, &quot;Upgrade to DC - FI/DC&quot;)) &amp;&amp;
(ISPICKVAL(Order_Status__c, &quot;Forms Analysis&quot;) || ISPICKVAL(Order_Status__c, &quot;Awaiting Approval-FA&quot;) || ISPICKVAL(Order_Status__c, &quot;Approved-FA&quot;) || ISPICKVAL(Order_Status__c, &quot;Binder Sent&quot;) || ISPICKVAL(Order_Status__c, &quot;Artwork to LFD Team&quot;) || ISPICKVAL(Order_Status__c, &quot;Proofs to LAS&quot;) || ISPICKVAL(Order_Status__c, &quot;Awaiting Approval&quot;) || ISPICKVAL(Order_Status__c, &quot;Approved&quot;) || ISPICKVAL(Order_Status__c, &quot;Burned&quot;) || ISPICKVAL(Order_Status__c, &quot;Awaiting Approval - ELF Data&quot;) || ISPICKVAL(Order_Status__c, &quot;Installed&quot;) || ISPICKVAL(Order_Status__c, &quot;Sent to Data Mapping/Other&quot;)) &amp;&amp;
(Artwork_Received__c &lt; DATEVALUE(CreatedDate) - 180 || ISBLANK(Artwork_Received__c)))</errorConditionFormula>
        <errorDisplayField>Artwork_Received__c</errorDisplayField>
        <errorMessage>Incorrect Date ===&gt; If Order Staus = &apos;Forms Analysis&apos; Then Artwork Received &gt;= CurrentDate - 180</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>DS_LAO_ArtworkToLFDTeam_AddChange</fullName>
        <active>true</active>
        <description>Artwork to LFD Team &gt;= &apos;Quote Sheet Approved&apos;</description>
        <errorConditionFormula>AND(RecordType.Name=&quot;Laser Imaging&quot;,OR(AND (NOT(BEGINS($User.Username,&quot;integration_user@adp.com&quot;)), ISNEW(), Artwork_to_LFD_Team__c &lt; Quote_Sheet_Approved__c, (ISPICKVAL(Order_Type__c, &quot;Add/Change - Alliance&quot;) || ISPICKVAL(Order_Type__c, &quot;Add/Change - Fast Track&quot;) || ISPICKVAL(Order_Type__c, &quot;Add/Change - ELF&quot;) || ISPICKVAL(Order_Type__c, &quot;Add/Change - Elite&quot;) || ISPICKVAL(Order_Type__c, &quot;Add/Change - FI/DC&quot;) || ISPICKVAL(Order_Type__c, &quot;Add/Change - eShowroom/Showroom&quot;))),
NOT(BEGINS($User.Username,&quot;integration_user@adp.com&quot;)) &amp;&amp; NOT(ISCHANGED( Ship_CMF_Info__c )) &amp;&amp; (ISPICKVAL(Order_Type__c, &quot;Add/Change - Alliance&quot;) || ISPICKVAL(Order_Type__c, &quot;Add/Change - Fast Track&quot;) || ISPICKVAL(Order_Type__c, &quot;Add/Change - ELF&quot;) || ISPICKVAL(Order_Type__c, &quot;Add/Change - Elite&quot;) || ISPICKVAL(Order_Type__c, &quot;Add/Change - FI/DC&quot;) || ISPICKVAL(Order_Type__c, &quot;Add/Change - eShowroom/Showroom&quot;)) &amp;&amp;
(ISPICKVAL(Order_Status__c, &quot;Artwork to LFD Team&quot;) || ISPICKVAL(Order_Status__c, &quot;Proofs to LAS&quot;) || ISPICKVAL(Order_Status__c, &quot;Awaiting Approval&quot;) || ISPICKVAL(Order_Status__c, &quot;Approved&quot;) || ISPICKVAL(Order_Status__c, &quot;Burned&quot;) || ISPICKVAL(Order_Status__c, &quot;Awaiting Approval - ELF Data&quot;) || ISPICKVAL(Order_Status__c, &quot;Installed&quot;) || ISPICKVAL(Order_Status__c, &quot;Sent to Data Mapping/Other&quot;)) &amp;&amp;
((Artwork_to_LFD_Team__c &lt; Quote_Sheet_Approved__c) || ISBLANK(Quote_Sheet_Approved__c) || ISBLANK(Artwork_to_LFD_Team__c))))</errorConditionFormula>
        <errorDisplayField>Artwork_to_LFD_Team__c</errorDisplayField>
        <errorMessage>Incorrect Date or &apos;Quote Sheet Approved&apos; field is null ===&gt; Artwork to LFD Team &gt;= &apos;Quote Sheet Approved&apos; for Add/Change</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>DS_LAO_ArtworkToLFDTeam_BuySell</fullName>
        <active>true</active>
        <description>Artwork to LFD Team &gt;= CreateDate</description>
        <errorConditionFormula>OR(AND (NOT(BEGINS($User.Username,&quot;integration_user@adp.com&quot;)), ISNEW(), DATEVALUE(Artwork_to_LFD_Team__c) &lt; TODAY(), (ISPICKVAL(Order_Type__c, &quot;Buy/Sell - Elite&quot;) || ISPICKVAL(Order_Type__c, &quot;Buy/Sell - ELF&quot;) || ISPICKVAL(Order_Type__c, &quot;Buy/Sell - Alliance&quot;) || ISPICKVAL(Order_Type__c, &quot;Buy/Sell - FI/DC&quot;) || ISPICKVAL(Order_Type__c, &quot;Buy/Sell - eShowroom/Showroom&quot;) || ISPICKVAL(Order_Type__c, &quot;New Install Concurrent&quot;))),
NOT(BEGINS($User.Username,&quot;integration_user@adp.com&quot;)) &amp;&amp; NOT(ISCHANGED( Ship_CMF_Info__c )) &amp;&amp; (ISPICKVAL(Order_Type__c, &quot;Buy/Sell - Elite&quot;) || ISPICKVAL(Order_Type__c, &quot;Buy/Sell - ELF&quot;) || ISPICKVAL(Order_Type__c, &quot;Buy/Sell - Alliance&quot;) || ISPICKVAL(Order_Type__c, &quot;Buy/Sell - FI/DC&quot;) || ISPICKVAL(Order_Type__c, &quot;Buy/Sell - eShowroom/Showroom&quot;) || ISPICKVAL(Order_Type__c, &quot;New Install Concurrent&quot;)) &amp;&amp; 
(ISPICKVAL(Order_Status__c, &quot;Artwork to LFD Team&quot;) || ISPICKVAL(Order_Status__c, &quot;Proofs to LAS&quot;) || ISPICKVAL(Order_Status__c, &quot;Awaiting Approval&quot;) || ISPICKVAL(Order_Status__c, &quot;Approved&quot;) || ISPICKVAL(Order_Status__c, &quot;Burned&quot;) || ISPICKVAL(Order_Status__c, &quot;Awaiting Approval - ELF Data&quot;) || ISPICKVAL(Order_Status__c, &quot;Installed&quot;) || ISPICKVAL(Order_Status__c, &quot;Sent to Data Mapping/Other&quot;) || ISPICKVAL(Order_Status__c, &quot;Data Mapping&quot;)) &amp;&amp;
((DATEVALUE(Artwork_to_LFD_Team__c) &lt; DATEVALUE(CreatedDate))|| ISBLANK(Artwork_to_LFD_Team__c)))</errorConditionFormula>
        <errorDisplayField>Artwork_to_LFD_Team__c</errorDisplayField>
        <errorMessage>Incorrect Date ===&gt; Artwork to LFD Team &gt;= CreateDate for Buy/Sell</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>DS_LAO_ArtworkToLFDTeam_NewInstall</fullName>
        <active>true</active>
        <description>Artwork to LFD Team &gt;= &apos;Binder Sent&apos;</description>
        <errorConditionFormula>OR(AND (NOT(BEGINS($User.Username,&quot;integration_user@adp.com&quot;)), ISNEW(), Artwork_to_LFD_Team__c &lt; Binder_Sent__c, (ISPICKVAL(Order_Type__c, &quot;New Install - Alliance&quot;) || ISPICKVAL(Order_Type__c, &quot;New Install - ELF&quot;) || ISPICKVAL(Order_Type__c, &quot;New Install - Elite&quot;) || ISPICKVAL(Order_Type__c, &quot;New Install - FI/DC&quot;) || ISPICKVAL(Order_Type__c, &quot;New Install - eShowroom/Showroom&quot;) || ISPICKVAL(Order_Type__c, &quot;Upgrade to DC - FI/DC&quot;))),
NOT(BEGINS($User.Username,&quot;integration_user@adp.com&quot;)) &amp;&amp; NOT(ISCHANGED( Ship_CMF_Info__c )) &amp;&amp; (ISPICKVAL(Order_Type__c, &quot;New Install - Alliance&quot;) || ISPICKVAL(Order_Type__c, &quot;New Install - ELF&quot;) || ISPICKVAL(Order_Type__c, &quot;New Install - Elite&quot;) || ISPICKVAL(Order_Type__c, &quot;New Install - FI/DC&quot;) || ISPICKVAL(Order_Type__c, &quot;New Install - eShowroom/Showroom&quot;) || ISPICKVAL(Order_Type__c, &quot;Upgrade to DC - FI/DC&quot;)) &amp;&amp; 
(ISPICKVAL(Order_Status__c, &quot;Artwork to LFD Team&quot;) || ISPICKVAL(Order_Status__c, &quot;Proofs to LAS&quot;) || ISPICKVAL(Order_Status__c, &quot;Awaiting Approval&quot;) || ISPICKVAL(Order_Status__c, &quot;Approved&quot;) || ISPICKVAL(Order_Status__c, &quot;Burned&quot;) || ISPICKVAL(Order_Status__c, &quot;Awaiting Approval - ELF Data&quot;) || ISPICKVAL(Order_Status__c, &quot;Installed&quot;) || ISPICKVAL(Order_Status__c, &quot;Sent to Data Mapping/Other&quot;)) &amp;&amp;
((Artwork_to_LFD_Team__c &lt; Binder_Sent__c) || ISBLANK(Binder_Sent__c) || ISBLANK(Artwork_to_LFD_Team__c)))</errorConditionFormula>
        <errorDisplayField>Artwork_to_LFD_Team__c</errorDisplayField>
        <errorMessage>Incorrect Date or &apos;Binder Sent&apos; is null ===&gt; Artwork to LFD Team &gt;= &apos;Binder Sent&apos; for New Install or DS Upgrade</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>DS_LAO_BinderSent</fullName>
        <active>true</active>
        <description>&apos;Binder Sent&apos; &gt;= CreateDate</description>
        <errorConditionFormula>OR(AND (NOT(BEGINS($User.Username,&quot;integration_user@adp.com&quot;)), ISNEW(), DATEVALUE(Binder_Sent__c) &lt; Today(), (ISPICKVAL(Order_Type__c, &quot;New Install - Elite&quot;) || ISPICKVAL(Order_Type__c, &quot;New Install - ELF&quot;) ||ISPICKVAL(Order_Type__c, &quot;New Install - Alliance&quot;) || ISPICKVAL(Order_Type__c, &quot;New Install - eShowroom/Showroom&quot;))), 
NOT(BEGINS($User.Username,&quot;integration_user@adp.com&quot;)) &amp;&amp; NOT(ISCHANGED( Ship_CMF_Info__c )) &amp;&amp; (ISPICKVAL(Order_Type__c, &quot;New Install - Elite&quot;) || ISPICKVAL(Order_Type__c, &quot;New Install - ELF&quot;) ||ISPICKVAL(Order_Type__c, &quot;New Install - Alliance&quot;) || ISPICKVAL(Order_Type__c, &quot;New Install - eShowroom/Showroom&quot;)) &amp;&amp; 
(ISPICKVAL(Order_Status__c, &quot;Binder Sent&quot;) || ISPICKVAL(Order_Status__c, &quot;Artwork to LFD Team&quot;) || ISPICKVAL(Order_Status__c, &quot;Proofs to LAS&quot;) || ISPICKVAL(Order_Status__c, &quot;Awaiting Approval&quot;) || ISPICKVAL(Order_Status__c, &quot;Approved&quot;) || ISPICKVAL(Order_Status__c, &quot;Burned&quot;) || ISPICKVAL(Order_Status__c, &quot;Awaiting Approval - ELF Data&quot;) || ISPICKVAL(Order_Status__c, &quot;Installed&quot;) || ISPICKVAL(Order_Status__c, &quot;Sent to Data Mapping/Other&quot;)) &amp;&amp; 
(DATEVALUE(Binder_Sent__c) &lt; DATEVALUE(CreatedDate) || ISBLANK(Binder_Sent__c)))</errorConditionFormula>
        <errorDisplayField>Binder_Sent__c</errorDisplayField>
        <errorMessage>Incorrect Date ===&gt; &apos;Binder Sent&apos; &gt;= CreateDate</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>DS_LAO_BurnCompleted_AddChange_FastTrack</fullName>
        <active>true</active>
        <description>Incorrect Date or &apos;Artwork to LFD Team&apos; is null ===&gt; Burn Completd &gt;= &apos;Artwork to LFD Team&apos;</description>
        <errorConditionFormula>AND(RecordType.Name=&quot;Laser Imaging&quot;,OR(
AND (NOT(BEGINS($User.Username,&quot;integration_user@adp.com&quot;)), ISNEW(), Burn_Completed__c &lt; Artwork_to_LFD_Team__c, (ISPICKVAL(Order_Type__c, &quot;Add/Change - Fast Track&quot;)), ISPICKVAL(Order_Status__c, &quot;Burned&quot;)),
NOT(BEGINS($User.Username,&quot;integration_user@adp.com&quot;)) &amp;&amp; NOT(ISCHANGED( Ship_CMF_Info__c )) &amp;&amp; (ISPICKVAL(Order_Type__c, &quot;Add/Change - Fast Track&quot;)) &amp;&amp; (ISPICKVAL(Order_Status__c, &quot;Burned&quot;)) &amp;&amp;
((Burn_Completed__c &lt; Artwork_to_LFD_Team__c) || ISBLANK(Burn_Completed__c) || ISBLANK(Artwork_to_LFD_Team__c))))</errorConditionFormula>
        <errorDisplayField>Burn_Completed__c</errorDisplayField>
        <errorMessage>Incorrect Date or &apos;Artwork to LFD Team&apos; is null ===&gt; Burn Completd &gt;= &apos;Artwork to LFD Team&apos;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>DS_LAO_BurnCompleted_Alli_BySell_Shroom</fullName>
        <active>true</active>
        <description>Burn Completd &gt;= Approved by Client</description>
        <errorConditionFormula>AND(RecordType.Name=&quot;Laser Imaging&quot;,OR( 
AND (NOT(BEGINS($User.Username,&quot;integration_user@adp.com&quot;)), ISNEW(), Burn_Completed__c &lt; Approved_by_Client__c, (ISPICKVAL(Order_Type__c, &quot;Add/Change - Alliance&quot;) || ISPICKVAL(Order_Type__c, &quot;Add/Change - FI/DC&quot;) || ISPICKVAL(Order_Type__c, &quot;Add/Change - eShowroom/Showroom&quot;) || ISPICKVAL(Order_Type__c, &quot;New Install - Alliance&quot;) || ISPICKVAL(Order_Type__c, &quot;New Install - FI/DC&quot;) || ISPICKVAL(Order_Type__c, &quot;New Install - eShowroom/Showroom&quot;)|| ISPICKVAL(Order_Type__c, &quot;Upgrade to DC - FI/DC&quot;) || ISPICKVAL(Order_Type__c, &quot;Buy/Sell - Alliance&quot;) || ISPICKVAL(Order_Type__c, &quot;Buy/Sell - FI/DC&quot;) || ISPICKVAL(Order_Type__c, &quot;Buy/Sell - eShowroom/Showroom&quot;))), 
NOT(BEGINS($User.Username,&quot;integration_user@adp.com&quot;)) &amp;&amp; NOT(ISCHANGED( Ship_CMF_Info__c )) &amp;&amp; (ISPICKVAL(Order_Type__c, &quot;Add/Change - Alliance&quot;) || ISPICKVAL(Order_Type__c, &quot;Add/Change - FI/DC&quot;) || ISPICKVAL(Order_Type__c, &quot;Add/Change - eShowroom/Showroom&quot;) || ISPICKVAL(Order_Type__c, &quot;New Install - Alliance&quot;) || ISPICKVAL(Order_Type__c, &quot;New Install - FI/DC&quot;) || ISPICKVAL(Order_Type__c, &quot;New Install - eShowroom/Showroom&quot;)|| ISPICKVAL(Order_Type__c, &quot;Upgrade to DC - FI/DC&quot;) || ISPICKVAL(Order_Type__c, &quot;Buy/Sell - Alliance&quot;) || ISPICKVAL(Order_Type__c, &quot;Buy/Sell - FI/DC&quot;) || ISPICKVAL(Order_Type__c, &quot;Buy/Sell - eShowroom/Showroom&quot;)) &amp;&amp; 
(ISPICKVAL(Order_Status__c, &quot;Sent to Data Mapping/Other&quot;)) &amp;&amp; 
((Burn_Completed__c &lt; Approved_by_Client__c) || ISBLANK(Burn_Completed__c) || ISBLANK(Approved_by_Client__c))))</errorConditionFormula>
        <errorDisplayField>Burn_Completed__c</errorDisplayField>
        <errorMessage>Incorrect Date or &apos;Approved by Client&apos; is null ===&gt; Burn Completd &gt;= Approved by Client</errorMessage>
    </validationRules>
</CustomObject>